--- a/packages/platforms/mellanox/arm64/arm64-mlnx-msn2700/onlp/builds/src/README
+++ b/packages/platforms/mellanox/arm64/arm64-mlnx-msn2700/onlp/builds/src/README
@@ -1,6 +1,6 @@
 ###############################################################################
 #
-# arm64mlnx_msn2700 README
+# arm64_mlnx_msn2700 README
 #
 ###############################################################################
 
